--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Luca Furieri</div>
-<div class="menu-item"><a href="index.php" class="current">Home</a></div>
+<div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="CV/cv.pdf">CV</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publications.php">Publications</a></div>
-<div class="menu-item"><a href="presentations.php">Presentations</a></div>
-<!-- <div class="menu-item"><a href="presentations.php">Presentations</a></div> -->
-<!-- <div class="menu-item"><a href="people.php">People</a></div> -->
-<!-- <div class="menu-item"><a href="teaching.php">Services</a></div> -->
+<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="presentations.html">Presentations</a></div>
+<!-- <div class="menu-item"><a href="presentations.html">Presentations</a></div> -->
+<!-- <div class="menu-item"><a href="people.html">People</a></div> -->
+<!-- <div class="menu-item"><a href="teaching.html">Services</a></div> -->
 <!-- <div class="menu-category">Others</div>
 <!-- <div class="menu-item"><a href="">Travel</a></div> -->
 </td>
