updated the CV 300820

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <td id="layout-menu">
 <div class="menu-category">Luca Furieri</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="CV/cv.pdf">CV</a></div>
+<div class="menu-item"><a href="CV/cv_300820.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="presentations.html">Presentations</a></div>
