--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <td id="layout-content">
 <h1>Luca Furieri</h1>
 <table class="imgtable"><tr><td>
-<p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="Luca_Furieri.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
+<p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="defense.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
 <p>PhD Candidate <br />
 <a href="https://www.ee.ethz.ch/">Departement Informationstechnologie und Elektrotechnik (D-ITET)</a> <br />
 <a href="https://www.ethz.ch/en.html">ETH Zurich</a></p>
@@ -42,10 +42,15 @@ E-mail: furieril@control.ee.ethz.ch</p>
 <p>I am a Ph.D. candidate in control theory at the Automatic Control Laboratory, ETH - Zurich, under the supervision of Prof. Maryam Kamgarpour. I received the Bachelor and Master degrees in Automation Engineering from the University of Bologna, both with honours, in 2014 and 2016 respectively. In 2016, I visited the Autonomous Systems Laboratory, ETH - Zurich as a student researcher to work on the control of small fixed-wing UAVs in windy environments. I was a finalist for the Best Student Paper award  at the 2019 European Control Conference and received the O. Hugo Schuck Best Paper Award at the 2018 American Control Conference. My current research interests are centered around the theoretical challenges of optimal distributed control for constrained and uncertain dynamical systems. I am also interested in several applications ranging from the electrical power grid to formations of autonomous vehicles.</p>
 <h2>News</h2>
 <ol>
+<li><p>05/2020: Our paper: <a href="https://arxiv.org/abs/1906.06777">Sparsity Invariance for Convex Design of Distributed Controllers</a> was accepted for publication in the IEEE Transactions on Control of Network Systems!</p>
+</li>
+<li><p>12/2019: Our paper: <a href="https://arxiv.org/abs/1912.08774">Learning the Globally Optimal Distributed LQ Regulator</a> was accepted for presentation at the Learning For Dynamics and Control Conference (L4DC).</p>
+</li>
 <li><p>01/2020: Our paper: <a href="https://arxiv.org/abs/1909.10999">First Order Methods For Globally Optimal Distributed Controllers Beyond Quadratic Invariance
 </a> was accepted for presentation at the American Control Conference (2020).</p>
 </li>
-<li><p>12/2019: Our paper: <a href="https://arxiv.org/abs/1906.06777">Sparsity Invariance for Convex Design of Distributed Controllers</a> was conditionally accepted for publication in the IEEE Transactions on Control of Network Systems.</p>
+<li><p>01/2020: Our paper: <a href="https://arxiv.org/abs/1909.10999">First Order Methods For Globally Optimal Distributed Controllers Beyond Quadratic Invariance
+</a> was accepted for presentation at the American Control Conference (2020).</p>
 </li>
 <li><p>12/2019: Check out our new preprint on learning optimal distributed controllers for unknown systems: <a href="https://arxiv.org/abs/1912.08774">Learning the Globally Optimal Distributed LQ Regulator</a>.</p>
 </li>
