--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@ E-mail: furieril@control.ee.ethz.ch</p>
 <p>I am a Ph.D. candidate in control theory at the Automatic Control Laboratory, ETH - Zurich, under the supervision of Prof. Maryam Kamgarpour. I received the Bachelor and Master degrees in Automation Engineering from the University of Bologna, both with honours, in 2014 and 2016 respectively. In 2016, I visited the Autonomous Systems Laboratory, ETH - Zurich as a student researcher to work on the control of small fixed-wing UAVs in windy environments. I was a finalist for the Best Student Paper award  at the 2019 European Control Conference and received the O. Hugo Schuck Best Paper Award at the 2018 American Control Conference. My current research interests are centered around the theoretical challenges of optimal distributed control for constrained and uncertain dynamical systems. I am also interested in several applications ranging from the electrical power grid to formations of autonomous vehicles.</p>
 <h2>News</h2>
 <ol>
+<li><p>11/2020: I started my Postdoc at EPFL in the <a href="https://www.epfl.ch/labs/decode/">DECODE group</a>, under the supervision of Prof. Giancarlo Ferrari Trecate.</p>
+</li>
+<li><p>09/2020: I succesfully defended my PhD thesis on "Optimality in Distributed Control: From Convex Programming to Reinforcement Learning"! Slides</p>
+</li>
+<li><p>06/2020: I was awarded the SNSF Postdoc.Mobility grant<a href="http://www.snf.ch/en/funding/careers/postdoc-mobility/">SNSF Postdoc.Mobility grant</a>.</p>
+</li>	
 <li><p>05/2020: Our paper: <a href="https://arxiv.org/abs/1906.06777">Sparsity Invariance for Convex Design of Distributed Controllers</a> was accepted for publication in the IEEE Transactions on Control of Network Systems!</p>
 </li>
 <li><p>12/2019: Our paper: <a href="https://arxiv.org/abs/1912.08774">Learning the Globally Optimal Distributed LQ Regulator</a> was accepted for presentation at the Learning For Dynamics and Control Conference (L4DC).</p>
-</li>
-<li><p>01/2020: Our paper: <a href="https://arxiv.org/abs/1909.10999">First Order Methods For Globally Optimal Distributed Controllers Beyond Quadratic Invariance
-</a> was accepted for presentation at the American Control Conference (2020).</p>
 </li>
 <li><p>01/2020: Our paper: <a href="https://arxiv.org/abs/1909.10999">First Order Methods For Globally Optimal Distributed Controllers Beyond Quadratic Invariance
 </a> was accepted for presentation at the American Control Conference (2020).</p>
