added more news up to November

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <td id="layout-content">
 <h1>Luca Furieri</h1>
 <table class="imgtable"><tr><td>
-<p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="defense.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
+<p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="./photos/defense.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
 <p>PhD Candidate <br />
 <a href="https://www.ee.ethz.ch/">Departement Informationstechnologie und Elektrotechnik (D-ITET)</a> <br />
 <a href="https://www.ethz.ch/en.html">ETH Zurich</a></p>
