updated publication list

--- a/publications.html
+++ b/publications.html
@@ -39,10 +39,7 @@ please feel free to email me (<a href="mailto:furieril@control.ee.ethz.ch">furie
 <h2>Preprints</h2>
 <ol>
 
-<li value=""><p>
-<a href="https://arxiv.org/abs/1912.08774">Learning the Globally Optimal Distributed LQ Regulator</a><br>
-<b> Luca Furieri</b>, Y. Zheng &amp; M. Kamgarpour,<br>
-</li>
+
 
 
 
@@ -71,27 +68,32 @@ dt { margin-top: 0em; font-weight: bold; }
 <ol>
 
 <li value=""><p>
+<a href="http://proceedings.mlr.press/v120/furieri20a/furieri20a.pdf">Learning the Globally Optimal Distributed LQ Regulator</a><br>
+<b> Luca Furieri</b>, Y. Zheng &amp; M. Kamgarpour,<br>
+</li>
+
+<li value=""><p>
 <a href="https://arxiv.org/pdf/1906.06777.pdf">Sparsity Invariance for Convex Design of Distributed Controllers</a><br>
   <b> Luca Furieri </b>, Y. Zheng, A. Papachristodoulou, &amp; M. Kamgarpour,<br>
-<i>IEEE Transactions on Control of Network Systems (conditionally accepted) </i><br>
+<i>IEEE Transactions on Control of Network Systems  </i><br>
 </li>
 
 
 <li value=""><p>
 <a href="https://arxiv.org/abse/1907.06256">On the Equivalence of Youla, System-level and Input-output Parameterizations</a><br>
  Y. Zheng, <b> Luca Furieri </b>, A. Papachristodoulou, N. Li, &amp; M. Kamgarpour,<br>
-<i>IEEE Transactions on Automatic Control (conditionally accepted) </i><br>
+<i>IEEE Transactions on Automatic Control  </i><br>
 </li>
 
 
 <li value=""><p>
-<a href="https://ieeexplore.ieee.org/document/8692409">An Input-Output Parametrization of Stabilizing Controllers: amidst Youla and System Level Synthesis</a><br>
+<a href="https://ieeexplore.ieee.org/document/8727508">An Input-Output Parametrization of Stabilizing Controllers: amidst Youla and System Level Synthesis</a><br>
 <b> Luca Furieri</b>, Y. Zheng, A. Papachristodoulou &amp; M. Kamgarpour,<br>
 <i>IEEE Control Systems Letters </i><br>
 </li>
 
 <li value=""><p>
-<a href="https://ieeexplore.ieee.org/document/8727508">Unified Approach to Convex Robust Distributed Control given Arbitrary Information Structures</a><br>
+<a href="https://ieeexplore.ieee.org/document/8692409">Unified Approach to Convex Robust Distributed Control given Arbitrary Information Structures</a><br>
 <b> Luca Furieri</b> &amp; M. Kamgarpour,<br>
 <i>IEEE Transactions on Automatic Control</i><br>
 </li>
@@ -114,7 +116,7 @@ dt { margin-top: 0em; font-weight: bold; }
 
 <li value=""><p>
 <a href="https://arxiv.org/abs/1909.10999">First Order Methods For Globally Optimal Distributed Controllers Beyond Quadratic Invariance</a><br>
-<b> Luca Furieri</b>, &amp; M. Kamgarpour, American Control Conference 2020 (ACC), conditionally accepted <br>
+<b> Luca Furieri</b>, &amp; M. Kamgarpour, American Control Conference 2020 (ACC) <br>
 </li>
 
 
