--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="jemdocCustom.css" type="text/css" />
-<title>Luca Furieri - ETH Zurich</title>
+<title>Luca Furieri - EPFL Lausanne</title>
 </head>
 
 <body>
@@ -30,13 +30,13 @@
 <table class="imgtable"><tr><td>
 <p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="./photos/defense.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
 <p>PhD Candidate <br />
-<a href="https://www.ee.ethz.ch/">Departement Informationstechnologie und Elektrotechnik (D-ITET)</a> <br />
-<a href="https://www.ethz.ch/en.html">ETH Zurich</a></p>
-<p>Address: <br />
+<a href="https://www.epfl.ch/labs/la/">Laboratoire d'Automatique (LA)</a> <br />
+<a href="https://www.epfl.ch/">EPFL Lausanne</a></p>
+<!--<p>Address: <br />
 ETL K.12, Physikstrasse 3 <br />
 8092 Zurich, Switzerland.</p>
-<p>Office phone number:+41 44 632 85 31 <br />
-E-mail: furieril@control.ee.ethz.ch</p>
+<p>Office phone number:+41 44 632 85 31 <br />-->
+E-mail: luca.furieri@epfl.ch</p>
 </td></tr></table>
 <h2>Brief Biography</h2>
 <p>I am a Postdoctoral researcher at the <a href="https://www.epfl.ch/labs/la/">Automatic Control Laboratory</a>, EPFL - Lausanne, working in <a href="https://www.epfl.ch/labs/decode/">Giancarlo Ferrari Trecate's group</a>. In September 2020, I received the Ph.D. degree in Control and Optimization from <a href="https://ethz.ch/en.html">ETH - Zurich</a> in the <a href="https://control.ee.ethz.ch/">Automatic Control Laboratory (IfA)</a> under the supervision of <a href="https://www.ece.ubc.ca/faculty/maryam-kamgarpour">Prof. Maryam Kamgarpour</a>. Previously, I have received the Bachelor and Master degrees in Automation Engineering from the <a href="https://www.unibo.it/en">University of Bologna</a>, both with honours, in 2014 and 2016 respectively. I was a finalist for the <a href="https://ecc19.eu/award/ecc19-best-student-paper-award/">Best Student Paper award</a> at the 2019 European Control Conference and received the <a href="http://a2c2.org/awards/o-hugo-schuck-best-paper-award">O. Hugo Schuck Best Paper Award</a> at the 2018 American Control Conference. <br />
@@ -46,9 +46,9 @@ My research interests lie in the broad areas of learning and optimal control for
 <ol>
 <li><p>11/2020: I started my Postdoc at EPFL in the <a href="https://www.epfl.ch/labs/decode/">DECODE group</a>, under the supervision of Prof. Giancarlo Ferrari Trecate.</p>
 </li>
-<li><p>09/2020: I succesfully defended my PhD thesis on "Optimality in Distributed Control: From Convex Programming to Reinforcement Learning"! Slides</p>
+<li><p>09/2020: I succesfully defended my PhD thesis on "Optimality in Distributed Control: From Convex Programming to Reinforcement Learning"!</p>
 </li>
-<li><p>06/2020: I was awarded the SNSF Postdoc.Mobility grant<a href="http://www.snf.ch/en/funding/careers/postdoc-mobility/">SNSF Postdoc.Mobility grant</a>.</p>
+<li><p>06/2020: I was awarded the SNSF Postdoc.Mobility grant <a href="http://www.snf.ch/en/funding/careers/postdoc-mobility/">SNSF Postdoc.Mobility grant</a>.</p>
 </li>	
 <li><p>05/2020: Our paper: <a href="https://arxiv.org/abs/1906.06777">Sparsity Invariance for Convex Design of Distributed Controllers</a> was accepted for publication in the IEEE Transactions on Control of Network Systems!</p>
 </li>
