removed phd researcher

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h1>Luca Furieri</h1>
 <table class="imgtable"><tr><td>
 <p><img style="float: left; margin-right: 10px; margin-top: 20px; height: 220px;" src="./photos/defense.jpg" alt=“Luca Furieri” /></p><td align="left"><p><a href="">Luca Furieri</a></p>
-<p>PhD Candidate <br />
+<p>Postdoctoral researcher<br />
 <a href="https://www.epfl.ch/labs/la/">Laboratoire d'Automatique (LA)</a> <br />
 <a href="https://www.epfl.ch/">EPFL Lausanne</a></p>
 <!--<p>Address: <br />
